--- a/artists/css/main.css
+++ b/artists/css/main.css
@@ -64,6 +64,12 @@ p {
     line-height: 130%;
 }
 
+#square {
+border-color:white;
+ border-style:solid;
+
+}
+
 .back {
     height: 610px; 
     position: relative; 
