--- a/events/css/main.css
+++ b/events/css/main.css
@@ -69,6 +69,9 @@ p {
     max-height:90%; 
     border-style:solid; 
     border-color:white;
+        display: block;
+    margin: auto;
+    width: 40%;
 }
 .back {
     height: 610px; 
