--- a/artists/css/main.css
+++ b/artists/css/main.css
@@ -11,6 +11,23 @@
  font-family: 'Kanit', sans-serif;
 }
 
+.sideimg {
+    max-width:90%; 
+    max-height:90%; 
+    border-style:solid; 
+    border-color:white;
+        display: block;
+    margin: auto;
+}
+
+.midimg {
+    max-width:80%; 
+    max-height:80%; 
+    border-style:solid; 
+    border-color:white;
+            margin: auto;
+            display: block;
+}
 
 button.accordion {
     background-color: #eee;
@@ -168,6 +185,31 @@ border-color:white;
     position: absolute;
     right:70%;
     top: 20%;
+
+    -webkit-animation: spin .99s infinite linear;
+    animation: spin .99s infinite linear;
+}
+@-webkit-keyframes spin {
+    100% { -webkit-transform: rotate(360deg); }
+}
+@-moz-keyframes spin {
+    100% { -moz-transform: rotate(360deg); }
+}
+@keyframes spin {
+    100% {
+        -moz-transform:rotate(360deg);
+        -o-transform:rotate(360deg);
+        transform:rotate(360deg);
+    }
+}
+
+.logo2 {
+    background-color: rgba(0,0,0,0);
+    height: 90px;
+    width: 90px;
+    position: absolute;
+    right:20%;
+    top: 60%;
 
     -webkit-animation: spin .99s infinite linear;
     animation: spin .99s infinite linear;
