--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,15 @@ p {
     filter: alpha(opacity=80);
 }
 
+.sideimg {
+    max-width:90%; 
+    max-height:90%; 
+    border-style:solid; 
+    border-color:white;
+        display: block;
+    margin: auto;
+}
+
 .nico {
     position: absolute;
     top:  3%;
@@ -153,6 +162,18 @@ p {
     top:  63%;
     left: 65.6%;
    height: 30%;
+}
+
+.bu:hover {
+        position: absolute;
+    top:  63%;
+    left: 65.5%;
+   height: 30%;
+   -ms-transform: rotate(15deg); /* IE 9 */
+    -webkit-transform: rotate(15deg); /* Chrome, Safari, Opera */
+    transform: rotate(15deg);
+            opacity: 0.8;
+    filter: alpha(opacity=80);
 }
 
 .logo {
