--- a/css/main.css
+++ b/css/main.css
@@ -238,6 +238,7 @@ width: 100%;
     width: 100%;
     height: 90%;
     max-height: 600px;
+    max-width: 1600px;
 }
 
 .row {
@@ -263,11 +264,18 @@ width: 100%;
     overflow-x: hidden;
     overflow-y: auto;
 }
+.loc-3 {
+    width: 25%;
+    margin-top: 10px;
+    max-height: 600px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
 
 .col-4 {
     width: 33.33%;
 }
-.col-5 {
+.loc-5 {
     width: 41.66%;
     max-height: 700px;
 }
@@ -318,4 +326,43 @@ a:hover {
 a:active {
     text-decoration: underline;
     color: black;
+}
+
+[class*="col-"] {
+    width: 100%;
+}
+
+@media only screen and (orientation: portrait)  {
+    .loc-5  { display:none }
+    .loc-3 { display:none }
+}
+@media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .col-m-1 {width: 8.33%;}
+    .col-m-2 {width: 16.66%;}
+    .col-m-3 {width: 25%;}
+    .col-m-4 {width: 33.33%;}
+    .col-m-5 {width: 41.66%;}
+    .col-m-6 {width: 50%;}
+    .col-m-7 {width: 58.33%;}
+    .col-m-8 {width: 66.66%;}
+    .col-m-9 {width: 75%;}
+    .col-m-10 {width: 83.33%;}
+    .col-m-11 {width: 91.66%;}
+    .col-m-12 {width: 100%;}
+}
+@media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .col-1 {width: 8.33%;}
+    .col-2 {width: 16.66%;}
+    .col-3 {width: 25%;}
+    .col-4 {width: 33.33%;}
+    .col-5 {width: 41.66%;}
+    .col-6 {width: 50%;}
+    .col-7 {width: 58.33%;}
+    .col-8 {width: 66.66%;}
+    .col-9 {width: 75%;}
+    .col-10 {width: 83.33%;}
+    .col-11 {width: 91.66%;}
+    .col-12 {width: 100%;}
 }
