--- a/css/main.css
+++ b/css/main.css
@@ -332,10 +332,12 @@ a:active {
 @media only screen and (orientation: portrait)  {
     .loc-5  { display:none }
     .loc-3 { display:none }
-    p {font-size:20px}
-    a {font-size:20px}
-    h1 {font-size:20px}
+    p {font-size:30px}
+    a {font-size:30px}
+    h1 {font-size:30px}
+    class*="col-" {width: 100%}
 }
+
 @media only screen and (min-width: 600px) {
     /* For tablets: */
     .col-m-1 {width: 8.33%;}
