--- a/events/css/main.css
+++ b/events/css/main.css
@@ -317,29 +317,21 @@ a:active {
     color: black;
 }
 
+
 [class*="col-"] {
     width: 100%;
 }
 
-@media only screen and (orientation: portrait)  {
-    .loc-5 { display:none }
+@media only screen and (max-width: 1000px)  {
+    .loc-5  { display:none }
+    .loc-3 { display:none }
+    p {font-size:50px;}
+    a {font-size:50px;}
+    h1 {font-size:50px;}
+    .col-1 {width: 100%;}
 }
-@media only screen and (min-width: 600px) {
-    /* For tablets: */
-    .col-m-1 {width: 8.33%;}
-    .col-m-2 {width: 16.66%;}
-    .col-m-3 {width: 25%;}
-    .col-m-4 {width: 33.33%;}
-    .col-m-5 {width: 41.66%;}
-    .col-m-6 {width: 50%;}
-    .col-m-7 {width: 58.33%;}
-    .col-m-8 {width: 66.66%;}
-    .col-m-9 {width: 75%;}
-    .col-m-10 {width: 83.33%;}
-    .col-m-11 {width: 91.66%;}
-    .col-m-12 {width: 100%;}
-}
-@media only screen and (min-width: 768px) {
+
+@media only screen and (min-width: 999px) {
     /* For desktop: */
     .col-1 {width: 8.33%;}
     .col-2 {width: 16.66%;}
