--- a/artists/css/main.css
+++ b/artists/css/main.css
@@ -286,7 +286,7 @@ width: 100%;
 
 .col-3 {
     width: 25%;
-    margin-top: 10px;
+height: 100%;
 }
 
 .col-4 {
@@ -353,18 +353,21 @@ a:active {
 @media only screen and (orientation: portrait)  {
     .loc-5 { display:none }
 }
+
+[class*="col-"] {
+    width: 100%;
 }
 
-@media only screen and (max-width: 749px)  {
+@media only screen and (max-width: 1000px)  {
     .loc-5  { display:none }
     .loc-3 { display:none }
-    p {font-size:30px}
-    a {font-size:30px}
-    h1 {font-size:30px}
-    *="col-" {width: 100%}
+    p {font-size:50px;}
+    a {font-size:50px;}
+    h1 {font-size:50px;}
+    .col-1 {width: 100%;}
 }
 
-@media only screen and (min-width: 749px) {
+@media only screen and (min-width: 999px) {
     /* For desktop: */
     .col-1 {width: 8.33%;}
     .col-2 {width: 16.66%;}
