--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,14 @@ h1 {
 text-decoration: underline;
 }
 
+h4 {
+    font-size: 11px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-left: 10px;
+text-decoration: none;
+}
+
 h3 { 
 font-size: 20px;
     margin-top: 0px;
@@ -53,7 +61,7 @@ font-size: 20px;
 }
 
 h2 {
-    font-size: 18px;
+    font-size: 11px;
     text-align: center;
 }
 
