--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
+
 }
 
 * {
@@ -42,9 +43,13 @@ h1 {
     margin-top: 0px;
     margin-bottom: 0px;
     padding-left: 10px;
+    padding-right: 10px;
 text-decoration: underline;
 }
 
+.newsletter {
+    padding: 10px
+}
 h4 {
     font-size: 11px;
     margin-top: 0px;
@@ -189,8 +194,8 @@ p {
     height: 90px;
     width: 90px;
     position: absolute;
-    right:70%;
-    top: 20%;
+    right:72%;
+    top: 30%;
 
     -webkit-animation: spin .99s infinite linear;
     animation: spin .99s infinite linear;
