--- a/css/main.css
+++ b/css/main.css
@@ -150,6 +150,17 @@ p {
     height: 30%;
 }
 
+.ar:hover {
+    position: absolute;
+    top:  3%;
+    left: 65.6%;
+    height: 30%;
+    -ms-transform: rotate(10deg); /* IE 9 */
+    -webkit-transform: rotate(10deg); /* Chrome, Safari, Opera */
+    transform: rotate(10deg);
+        opacity: 0.8;
+    filter: alpha(opacity=80);
+}
 .bd {
 
     position: absolute;
