--- a/css/main.css
+++ b/css/main.css
@@ -181,6 +181,11 @@ width: 100%;
     margin-bottom: 0px;
 }
 
+.homepage {
+    position: absolute;
+    top: 16px;
+}
+
 .col-1 {
     width: 8.33%;
 }
@@ -205,6 +210,7 @@ width: 100%;
 .loc-5 {
     width: 41.66%;
     max-height: 700px;
+    top: 2px;
 }
 
 .col-6 {
