--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ div.panel {
 
 
 h1 {
-    font-size: 15px;
+    font-size: 13px;
     margin-top: 0px;
     margin-bottom: 0px;
     padding-left: 10px;
@@ -52,7 +52,7 @@ text-decoration: underline;
     padding: 3px
 }
 h4 {
-    font-size: 15px;
+    font-size: 11px;
     margin-top: 0px;
     margin-bottom: 0px;
     padding-left: 10px;
@@ -67,12 +67,12 @@ font-size: 20px;
 }
 
 h2 {
-    font-size: 14px;
+    font-size: 11px;
     text-align: center;
 }
 
 p {
-    font-size: 15px;
+    font-size: 11px;
     padding-left: 10px;
     padding-right: 10px;
     line-height: 130%;
@@ -89,11 +89,12 @@ p {
 
 
 .sideimg {
-    max-width:90%; 
-    max-height:90%; 
+    max-width:100%; 
+    max-height:100%; 
     border-style:solid; 
     border-color:white;
         display: block;
+        padding-top: 40px;
     margin: auto;
 }
 
@@ -188,7 +189,7 @@ width: 100%;
 }
 
 .col-1 {
-    width: 8.33%;
+    width: 5%;
 }
 
 .col-2 {
@@ -277,7 +278,7 @@ a:active {
 
 @media only screen and (min-width: 799px) {
     /* For desktop: */
-    .col-1 {width: 8.33%;}
+    .col-1 {width: 5%;}
     .col-2 {width: 16.66%;}
     .col-3 {width: 25%;}
     .col-4 {width: 33.33%;}
