--- a/css/main2.css
+++ b/css/main2.css
@@ -1,33 +1,4 @@
 
-background: linear-gradient(88deg, #ffffff, #0600ff, #ff0000, #eeff00, #ffffff, #ffffff, #ffffff, #ffffff, #ffffff, #ffffff, #ffffff);
-background-size: 2200% 2200%;
-
--webkit-animation: AnimationName 37s ease infinite;
--moz-animation: AnimationName 37s ease infinite;
--o-animation: AnimationName 37s ease infinite;
-animation: AnimationName 37s ease infinite;
-
-@-webkit-keyframes AnimationName {
-    0%{background-position:0% 43%}
-    50%{background-position:100% 58%}
-    100%{background-position:0% 43%}
-}
-@-moz-keyframes AnimationName {
-    0%{background-position:0% 43%}
-    50%{background-position:100% 58%}
-    100%{background-position:0% 43%}
-}
-@-o-keyframes AnimationName {
-    0%{background-position:0% 43%}
-    50%{background-position:100% 58%}
-    100%{background-position:0% 43%}
-}
-@keyframes AnimationName { 
-    0%{background-position:0% 43%}
-    50%{background-position:100% 58%}
-    100%{background-position:0% 43%}
-}
-
 
 * {
     -webkit-box-sizing: border-box;
@@ -68,8 +39,26 @@ div.panel {
 
 
 
+
 h1 {
-    font-size: 13px;
+    color: #0008ff;
+    font-size: 25px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+h2 {
+    font-size: 15px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+h4 {
+    font-size: 18px;
     margin-top: 0px;
     margin-bottom: 0px;
     padding-left: 10px;
@@ -77,32 +66,18 @@ h1 {
 text-decoration: underline;
 }
 
-.newsletter {
-    padding: 3px
-}
-h4 {
-    font-size: 11px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding-left: 10px;
-text-decoration: none;
-}
-
 h3 { 
-font-size: 20px;
+        color: #0008ff;
+font-size: 15px;
     margin-top: 0px;
     margin-bottom: 0px;
     padding-left: 10px;
 }
 
-h2 {
-    font-size: 11px;
-    text-align: center;
-    padding-right: 40px;
-}
+
 
 p {
-    font-size: 11px;
+    font-size: 13px;
     padding-left: 10px;
     padding-right: 10px;
     line-height: 130%;
@@ -129,6 +104,10 @@ p {
     margin: auto;
 }
 
+.sideimg2 {
+    max-width:100%; 
+    max-height:100%; 
+}
 
 .cu {
 
