--- a/css/main2.css
+++ b/css/main2.css
@@ -1,5 +1,23 @@
 
 
+/* Circle Text Styles */
+#outerCircleText {
+
+/* Optional - DO NOT SET FONT-SIZE HERE, SET IT IN THE SCRIPT */
+font-style: normal;
+font-weight: bold;
+color: #0008ff;
+/* End Optional */
+
+/* Start Required - Do Not Edit */
+position: absolute;top: 0;left: 0;z-index: 3000;cursor: default;}
+#outerCircleText div {position: relative;}
+#outerCircleText div div {position: absolute;top: 0;left: 0;text-align: center;}
+/* End Required */
+/* End Circle Text Styles */
+
+
+
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -258,12 +276,12 @@ width: 100%;
 
 a:link {
     text-decoration: none;
-    color: black;
+    color: red;
 }
 
 a:visited {
     text-decoration: none;
-    color: black;
+    color: red;
 }
 
 a:hover {
