--- a/css/main.css
+++ b/css/main.css
@@ -96,9 +96,8 @@ font-size: 20px;
 }
 
 h2 {
-    font-size: 11px;
-    text-align: center;
-    padding-right: 40px;
+    font-size: 60px;
+    font-style: normal;
 }
 
 p {
