--- a/css/main-art.css
+++ b/css/main-art.css
@@ -1,29 +1,46 @@
 
 
-body { background: linear-gradient(270deg, #ff0000, #ff0000, #ffffff, #ffffff, #0054ff, #ffffff, #ffe300);
-background-size: 1400% 1400%; 
+body { background: linear-gradient(176deg, #ff0000, #ff0000, #000000, #000000, #ffffff, #000000, #000000, #000000, #000000);
+background-size: 1800% 1800%;
 
--webkit-animation: AnimationName 30s ease infinite;
--moz-animation: AnimationName 30s ease infinite;
-animation: AnimationName 30s ease infinite;
+-webkit-animation: AnimationName 53s ease infinite;
+-moz-animation: AnimationName 53s ease infinite;
+animation: AnimationName 53s ease infinite;
 
 }
 
 @-webkit-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
+    0%{background-position:0% 36%}
+    50%{background-position:100% 65%}
+    100%{background-position:0% 36%}
 }
 @-moz-keyframes AnimationName {
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
+    0%{background-position:0% 36%}
+    50%{background-position:100% 65%}
+    100%{background-position:0% 36%}
 }
 @keyframes AnimationName { 
-    0%{background-position:0% 50%}
-    50%{background-position:100% 50%}
-    100%{background-position:0% 50%}
+    0%{background-position:0% 36%}
+    50%{background-position:100% 65%}
+    100%{background-position:0% 36%}
 }
+
+/* Circle Text Styles */
+#outerCircleText {
+
+/* Optional - DO NOT SET FONT-SIZE HERE, SET IT IN THE SCRIPT */
+font-style: normal;
+font-weight: bold;
+color: #0008ff;
+/* End Optional */
+
+/* Start Required - Do Not Edit */
+position: absolute;top: 0;left: 0;z-index: 3000;cursor: default;}
+#outerCircleText div {position: relative;}
+#outerCircleText div div {position: absolute;top: 0;left: 0;text-align: center;}
+/* End Required */
+/* End Circle Text Styles */
+
 
 
 
