--- a/css/main-art.css
+++ b/css/main-art.css
@@ -46,9 +46,9 @@ position: absolute;top: 0;left: 0;z-index: 3000;cursor: default;}
 
 
 .sideimg2 {
-    max-width:5%; 
-    max-height:5%;
--webkit-animation:spin 4s linear infinite;
+    max-width:10%; 
+    max-height:10%;
+-webkit-animation:spin 8s linear infinite;
     -moz-animation:spin 4s linear infinite;
     animation:spin 4s linear infinite;
 
@@ -62,6 +62,15 @@ position: absolute;top: 0;left: 0;z-index: 3000;cursor: default;}
     max-width:15%; 
     max-height:15%;
     -webkit-animation:spin 4s linear infinite;
+    -moz-animation:spin 4s linear infinite;
+    animation:spin 4s linear infinite;
+
+}
+
+.sideimg4 {
+    max-width:5%; 
+    max-height:5%;
+-webkit-animation:spin 8s linear infinite;
     -moz-animation:spin 4s linear infinite;
     animation:spin 4s linear infinite;
 
