--- a/soft-plane/css/soft.css
+++ b/soft-plane/css/soft.css
@@ -42,6 +42,7 @@ animation: AnimationName 43s ease infinite;
 .sideimg3 {
     max-width:10%; 
     max-height:10%;
+    position: relative;
 
 
 }
@@ -49,12 +50,14 @@ animation: AnimationName 43s ease infinite;
 .sideimg4 {
     max-width:15%; 
     max-height:15%;
+    position: relative;
 
 }
 
 .sideimg5 {
     max-width:3%; 
     max-height:3%;
+    position: relative;
 
 }
 
@@ -64,6 +67,7 @@ animation: AnimationName 43s ease infinite;
 
 .one {
 	position: absolute;
+    max-width: 100%
 
 
 }
