--- a/pend/css/sub.css
+++ b/pend/css/sub.css
@@ -23,11 +23,28 @@ animation: AnimationName 300s ease infinite;
     100%{background-position:0% 50%}
 }
 
-#text {
-  font-size: 2px;
+.text {
+  position: absolute;
+  font-size: 15px;
 font-color: black;
+text-decoration: none;
+top: 5px;
 }
 
+a:link {
+  text-decoration: none;
+  color: black;
+}
+
+a:visited {
+  color: black;
+}
+
+.soundcloud {
+  position: absolute;
+  bottom: 5px;
+  width: 99%;
+}
 
 
 .sideimg2 {
