--- a/pend/css/brassica.css
+++ b/pend/css/brassica.css
@@ -4,8 +4,6 @@ body {
 }
 
 
-
-
 /* Standard syntax */
 #div1 {
     width: 600px;
@@ -68,12 +66,20 @@ body {
 }
 
 #div8 {
-    width: 35%;
-    height: 35%;
+    width: 30%;
+    height: 30%;
     position: absolute;        
     animation: mymoveiii 70s infinite alternate;
         animation-timing-function: ease-in-out;
 
+      }
+
+#div9 {
+    width: 20%;
+    height: 20%;
+    position: absolute;        
+    animation: mymoveiiii 50s infinite alternate;
+        animation-timing-function: ease-in-out;
 
 }
 
@@ -90,7 +96,7 @@ body {
 }
 
 @keyframes mymoveii {
-    from {left: 300px;}
+    from {left: 200px;}
     to {left: 500px;}
 }
 
@@ -99,6 +105,10 @@ body {
     to {left: 800px;}
 }
 
+@keyframes mymoveiiii {
+    from {left: 100px;}
+    to {left: 800px;}
+}
 
 
 
@@ -130,6 +140,11 @@ body {
 
 #bl6 {
         -webkit-animation: rotation 60s infinite linear;
+        max-width: 100%;
+}
+
+#bl9 {
+        -webkit-animation: rotation 120s infinite linear;
         max-width: 100%;
 }
 
