--- a/pend/css/brassica.css
+++ b/pend/css/brassica.css
@@ -83,6 +83,13 @@ body {
 
 }
 
+#diva {
+    width: 100%;
+    height: 100%;
+    position: absolute;        
+
+}
+
 
 /* Standard syntax */
 @keyframes mymove {
