--- a/css/main3.css
+++ b/css/main3.css
@@ -19,7 +19,7 @@ position: absolute;top: 0;left: 0;z-index: 3000;cursor: default;}
 
 
 body {
-	font-family: "Space Mono", sans-serif;
+  font-family: "Space Mono", sans-serif;
 
   margin: 0;
   color: white;
@@ -49,61 +49,78 @@ animation: AnimationName 6s ease infinite;
     100%{background-position:96% 0%}
 }
 
-h1 {
-    line-height: 1;
-    position: absolute;
-  text-align: center;
-  color: #001EF7
+h1{
+
+
 }
 
 .yes {
+      line-height: 1.1;
+  color: #001EF7;
   top: 105vw;
-  font-size: 3vw;
+  font-size: 1.4vw;
   font-family: "Space Mono", sans-serif;
+
 }
 
+.yes2 {
+      line-height: 1.1;
+  color: #FE5000 ;
+  top: 105vw;
+  font-size: 1.4vw;
+  font-family: "Space Mono", sans-serif;
+
+}
+
+.yes3 {
+      line-height: 1.1;
+  color: #56F900;
+  top: 105vw;
+  font-size: 1.4vw;
+  font-family: "Space Mono", sans-serif;
+
+}
 
 .honest {
-	position: absolute;
-	width: 33%;
-	right: 59vw;
-	top: 6vw;
+  position: absolute;
+  width: 33%;
+  right: 59vw;
+  top: 6vw;
 }
 
 .honest2 {
-	height:50vw;"
+  height:50vw;"
 }
 
 
 .squareb {
+     padding: 15px;
     background: #56F900;
     max-width: 100%;
-    height: 17vw;
-    text-align:center;
+    height: 40vw;
 }
 
 .squareo {
+  padding: 15px;
     background: #001EF7;
     max-width: 100%;
-    height: 17vw;
-    text-align:center;
+    height: 40vw;
 }
 
 .squareg {
+  padding: 15px;
     background: #FE5000;
     max-width: 100%;
-    height: 17vw;
-    text-align:center;
+    height: 40vw;
 }
 
 
 .last {
-	max-width: 100%;
+  max-width: 100%;
 }
 
 .last2 {
-	max-width: 100%;
-    padding: 10px;
+  max-width: 100%;
 }
 
 
@@ -131,7 +148,7 @@ h1 {
 }
 
 .yes {
-    top: 588vw;
+    top: 580vw;
 }
 
 
