--- a/css/main3.css
+++ b/css/main3.css
@@ -18,7 +18,7 @@ position: absolute;top: 0;left: 0;z-index: 3000;cursor: default;}
 
 
 
-body {
+body h3 {
   font-family: "Space Mono", sans-serif;
 
   margin: 0;
@@ -49,8 +49,22 @@ animation: AnimationName 6s ease infinite;
     100%{background-position:96% 0%}
 }
 
-h1{
+.aha {
+      line-height: 1;
+  font-size: 5vw;
+  color:#001EF7;
 
+
+}
+
+.last {
+  max-width: 100%;
+}
+
+.ifra { 
+
+  height:60vw;
+ width:100vw;
 
 }
 
@@ -138,19 +152,29 @@ h1{
     .honest2 { height: 140vw; 
 }
 
-.squareb { height: 65vw; 
+.squareb { height: 70vw; 
 }
 
-.squareo { height: 65vw; 
+.squareo { height: 70vw; 
 }
 
-.squareg { height: 65vw; 
+.squareg { height: 70vw; 
 }
 
 .yes {
-    top: 580vw;
+
+    font-size: 3.5vw;
 }
 
+.yes2 {
+
+    font-size: 3.5vw;
+}
+
+.yes3 {
+
+    font-size: 3.5vw;
+}
 
 
 html {
