--- a/css/main3.css
+++ b/css/main3.css
@@ -101,6 +101,15 @@ animation: AnimationName 6s ease infinite;
 
 }
 
+.yes4 {
+      line-height: 1.1;
+  color: #56F900;
+  top: 105vw;
+  font-size: 1.4vw;
+  font-family: "Space Mono", sans-serif;
+
+}
+
 .honest {
   position: absolute;
   width: 33%;
@@ -112,6 +121,13 @@ animation: AnimationName 6s ease infinite;
   height:50vw;"
 }
 
+
+.squarea {
+     padding: 15px;
+
+    max-width: 100%;
+    height: 40vw;
+}
 
 .squareb {
      padding: 15px;
